add full support for arbitrary stippling patterns/factors + fix extra resets in stippling (avoid restart when line is cut by BSP)

--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -1,4 +1,4 @@
-%  $Id: gl2ps.tex,v 1.182 2004-11-27 23:42:23 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.183 2004-12-17 01:49:21 geuzaine Exp $
 %
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2004 Christophe Geuzaine <geuz@geuz.org>
@@ -823,7 +823,8 @@ does not seem to be available anymore).
   code.
 \item[1.2.3] (xx, 2004) Fixed small bugs in (unused) PostScript pixmap
   code; better scaling of the z-buffer (improves
-  \dd{GL2PS_SIMPLE_LINE_OFFSET} and occlusion culling).
+  \dd{GL2PS_SIMPLE_LINE_OFFSET} and occlusion culling); added support
+  for complex stippling patterns.
 \end{description}
 
 \end{document}
