--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -1,4 +1,4 @@
-%  $Id: gl2ps.tex,v 1.183 2004-12-17 01:49:21 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.184 2004-12-17 02:53:40 geuzaine Exp $
 %
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2004 Christophe Geuzaine <geuz@geuz.org>
@@ -58,7 +58,7 @@
 
 \title{GL2PS: an OpenGL to PostScript printing library}
 \author{Christophe Geuzaine}
-\date{Version 1.2.3, xx 2004}
+\date{Version 1.2.3, December 16 2004}
 
 \maketitle
 
@@ -821,10 +821,10 @@ does not seem to be available anymore).
  \dd{gl2psBeginPage}.
 \item[1.2.2] (Sep 21, 2004) Fixed a couple of small bugs in the example
   code.
-\item[1.2.3] (xx, 2004) Fixed small bugs in (unused) PostScript pixmap
+\item[1.2.3] (Dec 16, 2004) Fixed small bugs in (unused) PostScript pixmap
   code; better scaling of the z-buffer (improves
   \dd{GL2PS_SIMPLE_LINE_OFFSET} and occlusion culling); added support
-  for complex stippling patterns.
+  for general stippling patterns.
 \end{description}
 
 \end{document}
