*** empty log message ***

--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -1,4 +1,4 @@
-%  $Id: gl2ps.tex,v 1.186 2004-12-23 05:29:08 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.187 2004-12-23 09:16:19 geuzaine Exp $
 %
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2004 Christophe Geuzaine <geuz@geuz.org>
@@ -58,13 +58,13 @@
 
 \title{GL2PS: an OpenGL to PostScript printing library}
 \author{Christophe Geuzaine}
-\date{Version 1.2.3, December 23 2004}
+\date{Version 1.2.4, xx 2005}
 
 \maketitle
 
 %%tth: \section*{Download}
 %%tth: The current distribution of GL2PS is
-%%tth: \href{http://www.geuz.org/gl2ps/src/gl2ps-1.2.3.tgz}{gl2ps-1.2.3.tgz}.
+%%tth: \href{http://www.geuz.org/gl2ps/src/gl2ps-1.2.4.tgz}{gl2ps-1.2.4.tgz}.
 %%tth: This distribution contains a complete
 %%tth: \href{http://www.geuz.org/gl2ps/gl2ps.pdf}
 %%tth: {documentation in PDF format}. Older versions are still
@@ -840,6 +840,7 @@ does not seem to be available anymore).
   code; better scaling of the z-buffer (improves
   \dd{GL2PS_SIMPLE_LINE_OFFSET} and occlusion culling); added support
   for general stippling patterns.
+\item[1.2.4] (xx, 2005) 
 \end{description}
 
 \end{document}
