only return on overflow if we actually parse the buffer (not for TEX!)

--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -1,4 +1,4 @@
-%  $Id: gl2ps.tex,v 1.187 2004-12-23 09:16:19 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.188 2004-12-29 16:28:48 geuzaine Exp $
 %
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2004 Christophe Geuzaine <geuz@geuz.org>
@@ -840,7 +840,8 @@ does not seem to be available anymore).
   code; better scaling of the z-buffer (improves
   \dd{GL2PS_SIMPLE_LINE_OFFSET} and occlusion culling); added support
   for general stippling patterns.
-\item[1.2.4] (xx, 2005) 
+\item[1.2.4] (xx, 2005) Fixed small extra test on feedback buffer for
+  \dd{GL2PS_TEX} output.
 \end{description}
 
 \end{document}
