--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -1,4 +1,4 @@
-%  $Id: gl2ps.tex,v 1.190 2005-03-05 17:58:39 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.191 2005-03-22 07:32:29 geuzaine Exp $
 %
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2005 Christophe Geuzaine <geuz@geuz.org>
@@ -841,8 +841,9 @@ does not seem to be available anymore).
   \dd{GL2PS_SIMPLE_LINE_OFFSET} and occlusion culling); added support
   for general stippling patterns.
 \item[1.2.4] (xx, 2005) Fixed small extra test on feedback buffer for
-  \dd{GL2PS_TEX} output; fixed missing brace in \LaTeX\ output for
-  text aligned using \dd{\GL2PS_TEXT_C}.
+ \dd{GL2PS_TEX} output; fixed missing brace in \LaTeX\ output for text
+ aligned using \dd{\GL2PS_TEXT_C}; fixed clipping in multi-viewport
+ PostScript output when \dd{GL2PS_DRAW_BACKGROUND} is not set.
 \end{description}
 
 \end{document}
