--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -1,4 +1,4 @@
-%  $Id: gl2ps.tex,v 1.192 2005-03-22 07:45:33 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.193 2005-03-22 18:39:14 geuzaine Exp $
 %
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2005 Christophe Geuzaine <geuz@geuz.org>
@@ -563,10 +563,13 @@ GLint gl2psSetOptions ( GLint options )
 
 \subsubsection{Description and arguments}
 
-\dd{gl2psSetOptions} permits to change the current options (originally
-passed as an argument to \dd{gl2psBeginPage}). It can for example be
-used to force GL2PS to print the background for some viewports, but
-not others.
+\dd{gl2psSetOptions} permits to change the global options initially
+set using the \dd{options} argument to
+\dd{gl2psBeginPage} (see section~\ref{sec:gl2psBeginPage}). 
+
+\dd{gl2psSetOptions} can for example be used to force GL2PS to print
+the background for selected viewports, by setting/unsetting
+\dd{GL2PS_DRAW_BACKGROUND} before calling \dd{gl2psBeginViewport}.
 
 \subsubsection{Return value}
 
@@ -867,9 +870,11 @@ does not seem to be available anymore).
   \dd{GL2PS_SIMPLE_LINE_OFFSET} and occlusion culling); added support
   for general stippling patterns.
 \item[1.2.4] (xx, 2005) Fixed small extra test on feedback buffer for
- \dd{GL2PS_TEX} output; fixed missing brace in \LaTeX\ output for text
- aligned using \dd{\GL2PS_TEXT_C}; fixed clipping in multi-viewport
- PostScript output when \dd{GL2PS_DRAW_BACKGROUND} is not set.
+  \dd{GL2PS_TEX} output; fixed missing brace in \LaTeX\ output for
+  text aligned using \dd{\GL2PS_TEXT_C}; fixed clipping in
+  multi-viewport PostScript output when \dd{GL2PS_DRAW_BACKGROUND} is
+  not set; new \dd{gl2psSetOptions} interface to change the current
+  options on the fly.
 \end{description}
 
 \end{document}
