--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -1,4 +1,4 @@
-%  $Id: gl2ps.tex,v 1.193 2005-03-22 18:39:14 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.194 2005-04-27 19:01:44 geuzaine Exp $
 %
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2005 Christophe Geuzaine <geuz@geuz.org>
@@ -58,7 +58,7 @@
 
 \title{GL2PS: an OpenGL to PostScript printing library}
 \author{Christophe Geuzaine}
-\date{Version 1.2.4, xx 2005}
+\date{Version 1.2.4, 27 April 2005}
 
 \maketitle
 
@@ -869,7 +869,7 @@ does not seem to be available anymore).
   code; better scaling of the z-buffer (improves
   \dd{GL2PS_SIMPLE_LINE_OFFSET} and occlusion culling); added support
   for general stippling patterns.
-\item[1.2.4] (xx, 2005) Fixed small extra test on feedback buffer for
+\item[1.2.4] (Apr 27, 2005) Fixed small extra test on feedback buffer for
   \dd{GL2PS_TEX} output; fixed missing brace in \LaTeX\ output for
   text aligned using \dd{\GL2PS_TEXT_C}; fixed clipping in
   multi-viewport PostScript output when \dd{GL2PS_DRAW_BACKGROUND} is
