--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -1,4 +1,4 @@
-%  $Id: gl2ps.tex,v 1.194 2005-04-27 19:01:44 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.195 2005-04-27 19:04:53 geuzaine Exp $
 %
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2005 Christophe Geuzaine <geuz@geuz.org>
@@ -869,9 +869,9 @@ does not seem to be available anymore).
   code; better scaling of the z-buffer (improves
   \dd{GL2PS_SIMPLE_LINE_OFFSET} and occlusion culling); added support
   for general stippling patterns.
-\item[1.2.4] (Apr 27, 2005) Fixed small extra test on feedback buffer for
+\item[1.2.4] (Apr 27, 2005) Fixed feedback buffer test for
   \dd{GL2PS_TEX} output; fixed missing brace in \LaTeX\ output for
-  text aligned using \dd{\GL2PS_TEXT_C}; fixed clipping in
+  text aligned using \dd{GL2PS_TEXT_C}; fixed clipping in
   multi-viewport PostScript output when \dd{GL2PS_DRAW_BACKGROUND} is
   not set; new \dd{gl2psSetOptions} interface to change the current
   options on the fly.
