fixed 2 unititialized variables in PDF code

--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -1,4 +1,4 @@
-%  $Id: gl2ps.tex,v 1.195 2005-04-27 19:04:53 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.196 2005-05-20 23:22:13 geuzaine Exp $
 %
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2005 Christophe Geuzaine <geuz@geuz.org>
@@ -875,6 +875,8 @@ does not seem to be available anymore).
   multi-viewport PostScript output when \dd{GL2PS_DRAW_BACKGROUND} is
   not set; new \dd{gl2psSetOptions} interface to change the current
   options on the fly.
+\item[1.2.5] (?, 2005) Fixed a couple of uninitialized variables in
+  PDF code;
 \end{description}
 
 \end{document}
