include g2psTestSimple in the distrib

--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -1,4 +1,4 @@
-%  $Id: gl2ps.tex,v 1.198 2005-06-19 18:30:10 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.199 2005-06-19 19:18:35 geuzaine Exp $
 %
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2005 Christophe Geuzaine <geuz@geuz.org>
@@ -621,7 +621,8 @@ fclose(fp);
 gl2psText("MyText", "Courier", 12);
 \end{verbatim}
 
-A complete example (\dd{gl2psTest.c}) is included in the distribution.
+Complete example programs (\dd{gl2psTestSimple.c} and \dd{gl2psTest.c})
+are included in the distribution.
 
 %\begin{figure}
 %\scalebox{0.85}{\input{outLatex.tex}}
