fixed bug in rescaling that could cause the output to be sorted in reverse order in BSP mode (bug introduced in 1.2.3)

--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -1,7 +1,7 @@
-%  $Id: gl2ps.tex,v 1.204 2006-02-11 18:02:19 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.205 2006-02-14 13:23:16 geuzaine Exp $
 %
 %  GL2PS, an OpenGL to PostScript Printing Library
-%  Copyright (C) 1999-2005 Christophe Geuzaine <geuz@geuz.org>
+%  Copyright (C) 1999-2006 Christophe Geuzaine <geuz@geuz.org>
 % 
 %  This program is free software; you can redistribute it and/or
 %  modify it under the terms of either:
@@ -59,7 +59,7 @@
 
 \title{GL2PS: an OpenGL to PostScript printing library}
 \author{Christophe Geuzaine}
-\date{Version 1.2.7, ? 2005}
+\date{Version 1.2.7, 14 February 2006}
 
 \maketitle
 
@@ -901,8 +901,9 @@ does not seem to be available anymore).
   overflowing feedback buffer (bug introduced in 1.2.5); added
   additional example program \dd{gl2psTestSimple.c} to the
   distribution.
-\item[1.2.7] (?, 2005) Added limited support for SVG and PGF formats;
-  made backend code more generic.
+\item[1.2.7] (Feb 14, 2006) Fixed bug that could cause sorting to be
+  inverted in BSP mode (bug introduced in 1.2.3); added limited
+  support for SVG and PGF formats; made backend code more generic.
 \end{description}
 
 \end{document}
