draw lines in a single stroke when possible, to help with stipping problems (postscript only at the moment)

--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -1,4 +1,4 @@
-%  $Id: gl2ps.tex,v 1.206 2006-02-15 02:17:16 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.207 2006-02-27 03:31:52 geuzaine Exp $
 %
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2006 Christophe Geuzaine <geuz@geuz.org>
@@ -59,13 +59,13 @@
 
 \title{GL2PS: an OpenGL to PostScript printing library}
 \author{Christophe Geuzaine}
-\date{Version 1.2.7, 15 February 2006}
+\date{Version 1.2.8, ? 2006}
 
 \maketitle
 
 %%tth: \section*{Download}
 %%tth: The current distribution of GL2PS is
-%%tth: \href{http://www.geuz.org/gl2ps/src/gl2ps-1.2.7.tgz}{gl2ps-1.2.7.tgz}.
+%%tth: \href{http://www.geuz.org/gl2ps/src/gl2ps-1.2.8.tgz}{gl2ps-1.2.8.tgz}.
 %%tth: This distribution contains a complete
 %%tth: \href{http://www.geuz.org/gl2ps/gl2ps.pdf}
 %%tth: {documentation in PDF format}. Older versions are still
@@ -904,6 +904,8 @@ does not seem to be available anymore).
 \item[1.2.7] (Feb 15, 2006) Fixed bug that could cause sorting to be
   inverted in BSP mode (bug introduced in 1.2.3); added limited
   support for SVG and PGF formats; made backend code more generic.
+\item[1.2.8] (?, 2006) Whenever possible lines are now rendered in a
+  single path;
 \end{description}
 
 \end{document}
