--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -1,4 +1,4 @@
-%  $Id: gl2ps.tex,v 1.210 2006-07-23 08:12:22 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.211 2006-08-09 01:12:07 geuzaine Exp $
 %
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2006 Christophe Geuzaine <geuz@geuz.org>
@@ -59,9 +59,26 @@
 
 \title{GL2PS: an OpenGL to PostScript printing library}
 \author{Christophe Geuzaine}
-\date{Version 1.3.0, ? 2006}
+\date{Version 1.3.0, August 8 2006}
 
 \maketitle
+
+\special{html:<center>
+<table width="50%" cellpadding="5" border="0"><tr>
+<td><img src="http://geuz.org/gl2ps/outThumbnail.png" alt="gl2ps"></td>
+<td><small><em>Example: compressed
+<a href="http://geuz.org/gl2ps/outBspCulledCompressed.ps.gz">PS</a>,
+<a href="http://geuz.org/gl2ps/outBspCulledCompressed.eps.gz">EPS</a>,
+<a href="http://geuz.org/gl2ps/outBspCulledCompressed.pdf">PDF</a> and
+<a href="http://geuz.org/gl2ps/outBspCulledCompressed.svgz">SVG</a>
+files created with the <tt>gl2psTest.c</tt> demo provided in the
+distribution. This illustrates the handling of smooth shading,
+intersecting primitives, line stippling, vector text rendering,
+multiple viewports and mixed vector/bitmap output.
+<p> Compare with a <a href="http://geuz.org/gl2ps/outBitmap.png">PNG</a>
+screenshot of the same OpenGL scene. 
+</em></small></td></tr></table>
+</center>}
 
 %%tth: \section*{Download}
 %%tth: The latest stable version of GL2PS is
@@ -674,7 +691,7 @@ are included in the distribution.
 %\caption{Sample output of the test program}
 %\end{figure}
 
-\section{Tips and Tricks}
+\section{Tips and tricks}
 \label{sec:tips}
 
 Here are, in no particular order, some useful tips and solutions to common
@@ -822,7 +839,7 @@ backend reorganization;
 \noemail{Shai Ayal}{shaiay@gmail.com} for rotated text support in
 PostScript;
 %
-\noemail{Ian D. Gay}{gay@sfu.ca} for 64 bit arch patch.
+\noemail{Ian D. Gay}{gay@sfu.ca} for 64 bit arch patch;
 %
 \noemail{Cosmin Truta}{cosmin@cs.toronto.edu} and \noemail{Baiju
   Devani}{} for various bug fixes and the new \dd{gl2psSpecial} code.
@@ -950,10 +967,10 @@ seem to be available anymore).
 \item[1.2.7] (Feb 15, 2006) Fixed bug that could cause sorting to be
   inverted in BSP mode (bug introduced in 1.2.3); added limited
   support for SVG and PGF formats; made backend code more generic.
-\item[1.3.0] (?, 2006) Full SVG support; whenever possible lines are
-  now rendered in a single path; better sorting of text and bitmap
-  elements; new function \dd{gl2psSpecial} to print device-specific
-  strings in the output stream.
+\item[1.3.0] (Aug 8, 2006) Full SVG support; improved line stippling
+  (whenever possible lines are now rendered in a single path); better
+  sorting of text and bitmap elements; new function \dd{gl2psSpecial}
+  to print device-specific strings in the output stream.
 \end{description}
 
 \end{document}
