--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -1,4 +1,4 @@
-%  $Id: gl2ps.tex,v 1.211 2006-08-09 01:12:07 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.212 2006-08-09 01:46:07 geuzaine Exp $
 %
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2006 Christophe Geuzaine <geuz@geuz.org>
@@ -83,7 +83,7 @@ screenshot of the same OpenGL scene.
 %%tth: \section*{Download}
 %%tth: The latest stable version of GL2PS is
 %%tth: \href{http://www.geuz.org/gl2ps/src/gl2ps-1.3.0.tgz}{gl2ps-1.3.0.tgz}.
-%%tth: Older versions and nightly cvs snapshots are available 
+%%tth: Older versions and nightly CVS snapshots are available 
 %%tth: \href{http://www.geuz.org/gl2ps/src/}{here}.
 %%tth: \par
 %%tth: For questions and discussions about GL2PS features, 
