*** empty log message ***

--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -1,4 +1,4 @@
-%  $Id: gl2ps.tex,v 1.213 2006-08-09 13:57:43 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.214 2006-08-09 18:09:15 geuzaine Exp $
 %
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2006 Christophe Geuzaine <geuz@geuz.org>
@@ -89,21 +89,20 @@ Compare with a <a href="http://geuz.org/gl2ps/outBitmap.png">PNG</a>
 screenshot of the OpenGL window.</em></small></td>
 </tr>
 </table>
-</center>}
-
-%%tth: \section*{Download}
-%%tth: The latest stable version of GL2PS is
-%%tth: \href{http://www.geuz.org/gl2ps/src/gl2ps-1.3.0.tgz}{gl2ps-1.3.0.tgz}.
-%%tth: Older versions and nightly CVS snapshots are available 
-%%tth: \href{http://www.geuz.org/gl2ps/src/}{here}.
-%%tth: \par
-%%tth: For questions and discussions about GL2PS features, 
-%%tth: resources, bugs, and so forth, see the
-%%tth: \href{http://www.geuz.org/mailman/listinfo/gl2ps/}
-%%tth: {gl2ps} mailing list. You can also subscribe to the
-%%tth: \href{http://www.geuz.org/mailman/listinfo/gl2ps-announce/}
-%%tth: {gl2ps-announce} mailing list to be notified each time a
-%%tth: new version of GL2PS is released.
+</center>
+<h2>Download</h2>
+The latest stable version of GL2PS is
+<a href="http://geuz.org/gl2ps/src/gl2ps-1.3.0.tgz">gl2ps-1.3.0.tgz</a>.
+Older versions and nightly CVS snapshots are available 
+<a href="http://geuz.org/gl2ps/src/">here</a>.
+<p>
+For questions and discussions about GL2PS features, resources, bugs, 
+etc., see the <a href="http://geuz.org/mailman/listinfo/gl2ps/">gl2ps</a>
+mailing list. You can also subscribe to the
+<a href="http://geuz.org/mailman/listinfo/gl2ps-announce/">gl2ps-announce</a>
+mailing list to be notified automatically when a new version of GL2PS
+is released.
+<h2>Documentation</h2>}
 
 \tableofcontents
 
