*** empty log message ***

--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -1,4 +1,4 @@
-%  $Id: gl2ps.tex,v 1.214 2006-08-09 18:09:15 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.215 2006-08-09 18:17:08 geuzaine Exp $
 %
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2006 Christophe Geuzaine <geuz@geuz.org>
@@ -45,7 +45,7 @@
     /Title (GL2PS: an OpenGL to PostScript printing library)
     /Author (Christophe Geuzaine)
     /Subject (Documentation)
-    /Keywords (OpenGL, PostScript, PDF, Printing)
+    /Keywords (OpenGL, PostScript, PDF, SVG, Printing)
   } 
 \fi
 
@@ -84,9 +84,9 @@
 files created with the <tt>gl2psTest.c</tt> demo provided in the
 distribution. This illustrates the handling of smooth shading,
 intersecting primitives, line stippling, vector text rendering,
-multiple viewports and mixed vector/bitmap output.
-Compare with a <a href="http://geuz.org/gl2ps/outBitmap.png">PNG</a>
-screenshot of the OpenGL window.</em></small></td>
+multiple viewports and mixed vector/bitmap output. Compare with a 
+<a href="http://geuz.org/gl2ps/outBitmap.png">PNG</a> screenshot of 
+the OpenGL window.</em></small></td>
 </tr>
 </table>
 </center>
