--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -1,4 +1,4 @@
-%  $Id: gl2ps.tex,v 1.215 2006-08-09 18:17:08 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.216 2006-08-11 13:28:28 geuzaine Exp $
 %
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2006 Christophe Geuzaine <geuz@geuz.org>
@@ -59,7 +59,7 @@
 
 \title{GL2PS: an OpenGL to PostScript printing library}
 \author{Christophe Geuzaine}
-\date{Version 1.3.0, August 8 2006}
+\date{Version 1.3.1, August ? 2006}
 
 \maketitle
 
@@ -92,7 +92,7 @@ the OpenGL window.</em></small></td>
 </center>
 <h2>Download</h2>
 The latest stable version of GL2PS is
-<a href="http://geuz.org/gl2ps/src/gl2ps-1.3.0.tgz">gl2ps-1.3.0.tgz</a>.
+<a href="http://geuz.org/gl2ps/src/gl2ps-1.3.1.tgz">gl2ps-1.3.1.tgz</a>.
 Older versions and nightly CVS snapshots are available 
 <a href="http://geuz.org/gl2ps/src/">here</a>.
 <p>
@@ -981,6 +981,9 @@ seem to be available anymore).
   (whenever possible lines are now rendered in a single path); better
   sorting of text and bitmap elements; new function \dd{gl2psSpecial}
   to print device-specific strings in the output stream.
+\item[1.3.1] (Aug ?, 2006) Fixed a small bug for PostScript output
+  with multiple viewports, where the viewport could be drawn with an
+  unwanted colored outline.
 \end{description}
 
 \end{document}
