--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -1,4 +1,4 @@
-%  $Id: gl2ps.tex,v 1.216 2006-08-11 13:28:28 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.217 2006-08-11 16:17:09 geuzaine Exp $
 %
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2006 Christophe Geuzaine <geuz@geuz.org>
@@ -59,7 +59,7 @@
 
 \title{GL2PS: an OpenGL to PostScript printing library}
 \author{Christophe Geuzaine}
-\date{Version 1.3.1, August ? 2006}
+\date{Version 1.3.1, August 11 2006}
 
 \maketitle
 
@@ -981,9 +981,9 @@ seem to be available anymore).
   (whenever possible lines are now rendered in a single path); better
   sorting of text and bitmap elements; new function \dd{gl2psSpecial}
   to print device-specific strings in the output stream.
-\item[1.3.1] (Aug ?, 2006) Fixed a small bug for PostScript output
-  with multiple viewports, where the viewport could be drawn with an
-  unwanted colored outline.
+\item[1.3.1] (Aug 11, 2006) Fixed a small bug for multi-viewport
+  PostScript output, where a viewport could be drawn with an unwanted
+  colored outline.
 \end{description}
 
 \end{document}
