--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -1,4 +1,4 @@
-%  $Id: gl2ps.tex,v 1.217 2006-08-11 16:17:09 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.218 2006-08-30 21:12:09 geuzaine Exp $
 %
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2006 Christophe Geuzaine <geuz@geuz.org>
@@ -852,7 +852,10 @@ PostScript;
 \noemail{Ian D. Gay}{gay@sfu.ca} for 64 bit arch patch;
 %
 \noemail{Cosmin Truta}{cosmin@cs.toronto.edu} and \noemail{Baiju
-  Devani}{} for various bug fixes and the new \dd{gl2psSpecial} code.
+  Devani}{} for various bug fixes and the new \dd{gl2psSpecial} code;
+%
+\noemail{Alexander Danilov}{danilov@lanl.gov} for a polygon offset bug
+fix.
 
 \section{Links}
 \label{sec:links}
@@ -984,6 +987,7 @@ seem to be available anymore).
 \item[1.3.1] (Aug 11, 2006) Fixed a small bug for multi-viewport
   PostScript output, where a viewport could be drawn with an unwanted
   colored outline.
+\item[1.3.2] (?, 2006) Fixed bug in polygon offset computation.
 \end{description}
 
 \end{document}
