--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -1,4 +1,4 @@
-%  $Id: gl2ps.tex,v 1.218 2006-08-30 21:12:09 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.219 2006-09-04 19:11:22 geuzaine Exp $
 %
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2006 Christophe Geuzaine <geuz@geuz.org>
@@ -116,7 +116,7 @@ objects. GL2PS provides advanced smooth shading and text rendering, culling
 of invisible primitives, mixed vector/bitmap output, and much more...
 
 GL2PS can currently create PostScript (PS), Encapsulated PostScript
-(EPS), Portable Document Format (PDF) and Scalar Vector Graphics (SVG)
+(EPS), Portable Document Format (PDF) and Scalable Vector Graphics (SVG)
 files, as well as \LaTeX\ files for the text fragments. GL2PS also
 provides limited, experiemental support for Portable LaTeX Graphics
 (PGF). Adding new vector output formats should be relatively easy; you
@@ -204,7 +204,7 @@ determine the way primitives are handled:
   You can of course combine the \LaTeX\ output with other graphic formats
   than PostScript or PDF. For example, you could export an image in JPEG
   or PNG format and use pdf\LaTeX\ with the same \dd{file.tex}.}
-\item[\dd{GL2PS_SVG}] The output stream will be in Scalar Vector
+\item[\dd{GL2PS_SVG}] The output stream will be in Scalable Vector
   Graphics format.
 \item[\dd{GL2PS_PGF}] (Experimental) The output stream will be in
   Portable LaTeX Graphics format.
