add width/height tags in svg (patch from Baiju Devani)

--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -1,4 +1,4 @@
-%  $Id: gl2ps.tex,v 1.219 2006-09-04 19:11:22 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.220 2006-09-07 00:10:48 geuzaine Exp $
 %
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2006 Christophe Geuzaine <geuz@geuz.org>
@@ -852,7 +852,8 @@ PostScript;
 \noemail{Ian D. Gay}{gay@sfu.ca} for 64 bit arch patch;
 %
 \noemail{Cosmin Truta}{cosmin@cs.toronto.edu} and \noemail{Baiju
-  Devani}{} for various bug fixes and the new \dd{gl2psSpecial} code;
+  Devani}{b.devani@gmail.com} for various bug fixes and the new
+\dd{gl2psSpecial} code;
 %
 \noemail{Alexander Danilov}{danilov@lanl.gov} for a polygon offset bug
 fix.
