--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -1,4 +1,4 @@
-%  $Id: gl2ps.tex,v 1.221 2006-10-30 17:11:52 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.222 2006-11-06 00:48:06 geuzaine Exp $
 %
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2006 Christophe Geuzaine <geuz@geuz.org>
@@ -59,7 +59,7 @@
 
 \title{GL2PS: an OpenGL to PostScript printing library}
 \author{Christophe Geuzaine}
-\date{Version 1.3.1, August 11 2006}
+\date{Version 1.3.2, November 5 2006}
 
 \maketitle
 
@@ -991,8 +991,9 @@ seem to be available anymore).
 \item[1.3.1] (Aug 11, 2006) Fixed a small bug for multi-viewport
   PostScript output, where a viewport could be drawn with an unwanted
   colored outline.
-\item[1.3.2] (?, 2006) Fixed bug in polygon offset computation; fixed
-  possible out-of-bound array access in stippling pattern parser.
+\item[1.3.2] (Nov 5, 2006) Fixed bug in polygon offset computation;
+  fixed landscape mode in SVG; fixed possible out-of-bound array
+  access in stippling pattern parser.
 \end{description}
 
 \end{document}
