--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -1,4 +1,4 @@
-%  $Id: gl2ps.tex,v 1.222 2006-11-06 00:48:06 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.223 2006-11-06 00:53:53 geuzaine Exp $
 %
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2006 Christophe Geuzaine <geuz@geuz.org>
@@ -992,7 +992,7 @@ seem to be available anymore).
   PostScript output, where a viewport could be drawn with an unwanted
   colored outline.
 \item[1.3.2] (Nov 5, 2006) Fixed bug in polygon offset computation;
-  fixed landscape mode in SVG; fixed possible out-of-bound array
+  fixed landscape mode in SVG; fixed potential out-of-bounds array
   access in stippling pattern parser.
 \end{description}
 
